--- a/index.html
+++ b/index.html
@@ -15,20 +15,21 @@
     <div class="container">
         <div class="xzoom-container">
             <img src="./images/1-min.jpg" class="xzoom" xoriginal="./images/1.jpg">
-
-            <div class="xzoom-thumbs">
-                <a href="./images/1.jpg">
-                    <img class="xzoom-gallery" src="./images/1-min.jpg" xpreview="./images/1-min.jpg">
-                </a>
-                <a href="./images/2.jpg">
-                    <img class="xzoom-gallery" src="./images/2-min.jpg">
-                </a>
-                <a href="./images/3.jpg">
-                    <img class="xzoom-gallery" src="./images/3-min.jpg">
-                </a>
-                <a href="./images/4.jpg">
-                    <img class="xzoom-gallery" src="./images/4-min.jpg">
-                </a>
+            <div id="slide-wrapper">
+                <div class="xzoom-thumbs" id="slider">
+                    <a href="./images/1.jpg">
+                        <img class="xzoom-gallery" src="./images/1-min.jpg" xpreview="./images/1-min.jpg">
+                    </a>
+                    <a href="./images/2.jpg">
+                        <img class="xzoom-gallery" src="./images/2-min.jpg">
+                    </a>
+                    <a href="./images/3.jpg">
+                        <img class="xzoom-gallery" src="./images/3-min.jpg">
+                    </a>
+                    <a href="./images/4.jpg">
+                        <img class="xzoom-gallery" src="./images/4-min.jpg">
+                    </a>
+                </div>
             </div>
         </div>
         <!-- End Content -->
